# sneklib

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
snek/snektest/: cli.py  presentation.py  results.py  runner.py
src/sneklib/: __init__.py
tests/integration/: test_snektest.py
tests/unit/pytest_tests/: test_presentation.py
tests/unit/snektest/: test.py  test_async.py
