[project]
name = "sneklib"
# TODO: maybe add author?
version = "0.0.1"
description = "Library with various libs, with type-safety and async support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
    "mypy>=1.11.2",
    "pytest-asyncio>=0.24.0",
    "deadcode>=2.4.1",
    "debugpy>=1.8.5",
    "twine>=5.1.1",
]

[project.optional-dependencies]
snektest = ["colorama"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["snek"]

[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]
